--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "leaflet": "^1.9.4",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "query-string": "^8.2.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
