--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "aurora-airbnb-clone",
   "version": "0.1.0",
+  "description": "Airbnb clone app",
+  "author": {
+    "name": "Yu Zhang",
+    "email": "Y.Zhang@utas.edu.au"
+  },
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,6 +21,7 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
